--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "merrycasino_server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/app.ts",
   "scripts": {
-    "dev": "nodemon --watch . --ext ts --exec ts-node app.ts",
+    "dev": "nodemon --watch . --ext ts --exec ts-node src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
